--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --main-bg-color: hsl(222, 26%, 31%);
     --keypad-toggle-bg-color: hsl(223, 31%, 20%);
     --screen-bg-color: hsl(224, 36%, 15%);
+    --screen-text-color: #fff;
     /* keyboard colors */
     --function-key-bg-color: hsl(225, 21%, 49%);
     --function-key-shadow-color: hsl(224, 28%, 35%);
@@ -11,8 +12,8 @@
     --primary-key-bg-color: hsl(30, 25%, 89%);
     --primary-key-shadow-color: hsl(28, 16%, 65%);
     /* text colors */
-    --text-primary-color:#fff;
-    --text-secondary-color: hsl(221, 14%, 31%);
+    --text-primary-color:hsl(221, 14%, 31%);
+    --text-secondary-color: #fff;
 }
 
 [color-scheme="theme2"] {
@@ -20,6 +21,7 @@
     --main-bg-color: hsl(0, 0%, 90%);
     --keypad-toggle-bg-color: hsl(0, 5%, 81%);
     --screen-bg-color: hsl(0, 0%, 93%);
+    --screen-text-color: hsl(60, 10%, 19%);
     /* keyboard colors */
     --function-key-bg-color: hsl(185, 42%, 37%);
     --function-key-shadow-color: hsl(185, 58%, 25%);
@@ -38,6 +40,7 @@
     --main-bg-color: hsl(268, 75%, 9%);
     --keypad-toggle-bg-color: hsl(268, 71%, 12%);
     --screen-bg-color: hsl(268, 71%, 12%);
+    --screen-text-color: hsl(52, 100%, 62%);
     /* keyboard colors */
     --function-key-bg-color: hsl(281, 89%, 26%);
     --function-key-shadow-color: hsl(285, 91%, 52%);
@@ -77,7 +80,8 @@ h1 {
     font-size: 2rem;
 }
 
-p {
+p, 
+span {
     font-size: .75rem;
 }
 
@@ -100,93 +104,178 @@ button {
 
 .container {
     border: 1px magenta solid;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 540px;
-    margin: 0 auto;
+    margin: 0 auto; */
 }
 
 .header {
     
     color: var(--text-primary-color);
-    border: 1px limegreen solid;
+    /* border: 1px limegreen solid; */
     display: grid;
-    grid-template-columns: repeat(3, 150px);
+    grid-template-columns: 100px auto  71px;
+    grid-template-rows: 18px 26px;
     grid-template-areas: 
         "title . theme-numbers"
         "title theme switch-toggle";
 }
 .title {
     grid-area: title;
-    border: 1px solid cyan;
+    /* border: 1px solid cyan; */
+    display: flex;
+    align-items: flex-end;
 }
 .theme {
-    border: 1px dodgerblue solid;
+    /* border: 1px dodgerblue solid; */
+    place-self: end;
+    margin-right: 1.5em;
     grid-area: theme;
 }
 
 .theme-numbers {
-    border: 1px goldenrod solid;
+
     grid-area: theme-numbers;
+    place-self: end;
+    width: 71px;
+    display: flex;
+    justify-content: space-evenly;
+    box-sizing: border-box;
+}
+
+.theme-numbers span {
+    padding: 0 7px;
 }
 
 .switch-toggle {
-    border: 1px brown solid;
     grid-area: switch-toggle;
-}
-
-.container.display {
-    background: var(--screen-bg-color);
-    padding: 2em;
-    color: var(--text-primary-color);
-
-}
-
-.display {
-    background: var(--screen-bg-color);
-    width:400px;
-    height: 50px;
-    padding: 1em;
-
-}
-
-.keyboard {
+    place-self: end;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 2px;
+    box-sizing: border-box;
     background: var(--keypad-toggle-bg-color);
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1em;
-    padding: 1em;
-}
-
-.btn {
-    height: 4rem;
-    width: 4rem;
+    border-radius: 50px;
+    width: 70px;
+    padding: 5px;
 }
 
 
 /* toggle switch */
-.switch-toggle {
-    float: left;
-    background: #242729;
- }
+
  .switch-toggle input {
-   position: absolute;
-   opacity: 0;
+    display: flex;
+    justify-content: space-evenly;
+    display: none;
  }
- .switch-toggle input + label {
-   padding: 7px;
-   float:left;
-   color: #fff;
-   cursor: pointer;
+
+ .toggle {
+     background-color: var(--equal-key-bg-color);
+     color: var(--equal-key-bg-color);
+     height: 16px;
+     width: 16px;
+     border-radius: 50%;
+     opacity: 0;
+     /* z-index: 90; */
+
  }
- .switch-toggle input:checked + label {
-   background: green;
-   border-radius: 100%;
+ .toggled-on {
+    opacity: 1;
  }
 
 
+.container {
+    background: var(--main-bg-color);
+    color: var(--screen-text-color);
+    padding: 1.5em;
+    max-width: 540px;
+    display: grid;
+    grid-template-columns: minmax(327px, auto);
+    grid-template-areas: 
+        "header"
+        "display"
+        "keyboard";
+}
+
+.header {
+    grid-area: header;
+    color: var(--screen-text-color);
+    margin-bottom: 2em;
+}
+
+.container-display {
+    grid-area: display;
+    width: 100%;
+}
+.display {
+    background: var(--screen-bg-color);
+    color: var(--screen-text-color  );
+    box-sizing: border-box;
+    height: 88px;
+    padding: 1em;
+    margin-bottom: .7em;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.keyboard {
+    grid-area: keyboard;
+    background: var(--keypad-toggle-bg-color);
+    
+    display: grid;
+    grid-template-columns: repeat(4, minmax(60px, 1fr));
+    grid-template-rows: repeat(5,minmax(60px, 1fr));
+    gap: 1em;
+    padding: 1.75em 1.5em;
+    border-radius: 10px;
+    justify-content: center;
+}
+
+.btn {
+
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    background: var(--primary-key-bg-color);    
+    box-shadow: 0 4px 0 0 var(--primary-key-shadow-color);
+    color: var(--text-primary-color);
+}
+
+.btn-function-key {
+    background: var(--function-key-bg-color);
+    box-shadow: 0 4px 0 0 var(--function-key-shadow-color);
+    color: var(--text-secondary-color);
+}
+
+.btn-equal-key {
+    grid-column: 3 / 5;
+    background: var(--equal-key-bg-color);
+    box-shadow: 0 4px 0 0 var(--equal-key-shadow-color);
+    color: var(--text-secondary-color);
+}
+
+.btn-reset-key {
+    grid-column: 1 / 3;
+    
+
+}
+
+
+
+/* @media (min-width: 400px) {
+    .keyboard {
+        gap: 1.25em;
+        padding: 2em;
+    }
+}
  
+@media (min-width: 450px) {
+    .keyboard {
+        gap: 1.5em;
+        padding: 2em;
+    }
+} */
 
 /* attribution styles */
 .attribution {
