--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,16 @@
     --screen-text-color: #fff;
     /* keyboard colors */
     --function-key-bg-color: hsl(225, 21%, 49%);
+    --function-key-bg-color-hover: #A2B2E1;
     --function-key-shadow-color: hsl(224, 28%, 35%);
     --equal-key-bg-color: hsl(6, 63%, 50%);
+    --equal-key-bg-color-hover: #F96B5B;
     --equal-key-shadow-color: hsl(6, 70%, 34%);
     --primary-key-bg-color: hsl(30, 25%, 89%);
+    --primary-key-bg-color-hover: #fff;    
     --primary-key-shadow-color: hsl(28, 16%, 65%);
     /* text colors */
-    --text-primary-color:hsl(221, 14%, 31%);
+    --text-primary-color: hsl(221, 14%, 31%);
     --text-secondary-color: #fff;
     --text-function-key-color: #fff;
     --text-equal-key-color: #fff;
@@ -26,10 +29,13 @@
     --screen-text-color: hsl(60, 10%, 19%);
     /* keyboard colors */
     --function-key-bg-color: hsl(185, 42%, 37%);
+    --function-key-bg-color-hover: #62B5BC;
     --function-key-shadow-color: hsl(185, 58%, 25%);
-    --equal-key-bg-color:  hsl(25, 98%, 40%);
+    --equal-key-bg-color: hsl(25, 98%, 40%);
+    --equal-key-bg-color-hover: #FF8A38;
     --equal-key-shadow-color: hsl(25, 99%, 27%);
     --primary-key-bg-color: hsl(45, 7%, 89%);
+    --primary-key-bg-color-hover: #fff;
     --primary-key-shadow-color: hsl(35, 11%, 61%);
     /* text colors */
     --text-primary-color: hsl(60, 10%, 19%);
@@ -47,10 +53,13 @@
     --screen-text-color: hsl(52, 100%, 62%);
     /* keyboard colors */
     --function-key-bg-color: hsl(281, 89%, 26%);
+    --function-key-bg-color-hover: #8631AF;
     --function-key-shadow-color: hsl(285, 91%, 52%);
-    --equal-key-bg-color:  hsl(176, 100%, 44%);
+    --equal-key-bg-color: hsl(176, 100%, 44%);
+    --equal-key-bg-color-hover: #93FFF8;
     --equal-key-shadow-color: hsl(177, 92%, 70%);
     --primary-key-bg-color: hsl(268, 47%, 21%);
+    --primary-key-bg-color-hover: #6C34AC;
     --primary-key-shadow-color: hsl(290, 70%, 36%);
     /* text colors */
     --text-primary-color: hsl(52, 100%, 62%);
@@ -86,7 +95,7 @@ h1 {
     font-size: 2rem;
 }
 
-p, 
+p,
 span {
     font-size: .75rem;
 }
@@ -99,6 +108,11 @@ span {
 
 button {
     font-size: 1.75rem;
+    cursor: pointer;
+}
+
+label {
+    cursor: pointer;
 }
 
 .btn-function-key,
@@ -108,31 +122,25 @@ button {
 
 /* layout */
 
-.container {
-    border: 1px magenta solid;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto; */
-}
-
 .header {
-    
+
     color: var(--text-primary-color);
     /* border: 1px limegreen solid; */
     display: grid;
-    grid-template-columns: 100px auto  71px;
+    grid-template-columns: 100px auto 71px;
     grid-template-rows: 18px 26px;
-    grid-template-areas: 
+    grid-template-areas:
         "title . theme-numbers"
         "title theme switch-toggle";
 }
+
 .title {
     grid-area: title;
     /* border: 1px solid cyan; */
     display: flex;
     align-items: flex-end;
 }
+
 .theme {
     /* border: 1px dodgerblue solid; */
     place-self: end;
@@ -141,13 +149,13 @@ button {
 }
 
 .theme-numbers {
-
     grid-area: theme-numbers;
     place-self: end;
     width: 71px;
     display: flex;
     justify-content: space-evenly;
     box-sizing: border-box;
+    margin-bottom: 5px;
 }
 
 .theme-numbers span {
@@ -170,28 +178,29 @@ button {
 
 /* toggle switch */
 
- .switch-toggle input {
+.switch-toggle input {
     display: flex;
     justify-content: space-evenly;
     display: none;
- }
+}
 
- .toggle {
-     background-color: var(--equal-key-bg-color);
-     color: var(--equal-key-bg-color);
-     height: 16px;
-     width: 16px;
-     border-radius: 50%;
-     opacity: 0;
+.toggle {
+    background-color: var(--equal-key-bg-color);
+    color: var(--equal-key-bg-color);
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    opacity: 0;
 
- }
+}
 
- .toggle:hover {
+.toggle:hover {
     filter: brightness(1.33);
- }
- .toggled-on {
+}
+
+.toggled-on {
     opacity: 1;
- }
+}
 
 
 .container {
@@ -201,7 +210,7 @@ button {
     max-width: 540px;
     display: grid;
     grid-template-columns: minmax(327px, auto);
-    grid-template-areas: 
+    grid-template-areas:
         "header"
         "display"
         "keyboard";
@@ -216,43 +225,54 @@ button {
 .container-display {
     grid-area: display;
     width: 100%;
+    
 }
+
 .display {
     background: var(--screen-bg-color);
-    color: var(--screen-text-color  );
+    color: var(--screen-text-color);
     box-sizing: border-box;
-    height: 88px;
-    padding: 1em;
+    /* height: 88px; */
+    padding: .9em .8em .7em .8em;
     margin-bottom: .7em;
     width: 100%;
     border-radius: 10px;
+    overflow: auto;
 }
 
 .keyboard {
     grid-area: keyboard;
-    background: var(--keypad-toggle-bg-color);    
+    background: var(--keypad-toggle-bg-color);
     display: grid;
     grid-template-columns: repeat(4, minmax(60px, 1fr));
-    grid-template-rows: repeat(5,minmax(60px, 1fr));
+    grid-template-rows: repeat(5, minmax(60px, 1fr));
     gap: 1em;
-    padding: 1.75em 1.5em;
+    padding: 1.6em;
     border-radius: 10px;
     justify-content: center;
 }
 
 .btn {
-    border-radius: 5px;
+    border-radius: 10px;
     outline: none;
     border: none;
-    background: var(--primary-key-bg-color);    
+    background: var(--primary-key-bg-color);
     box-shadow: 0 4px 0 0 var(--primary-key-shadow-color);
     color: var(--text-primary-color);
 }
+
+.btn:hover {
+    background: var(--primary-key-bg-color-hover);
+}
+
 
 .btn-function-key {
     background: var(--function-key-bg-color);
     box-shadow: 0 4px 0 0 var(--function-key-shadow-color);
     color: var(--text-function-key-color);
+}
+.btn-function-key:hover {
+    background: var(--function-key-bg-color-hover);
 }
 
 .btn-equal-key {
@@ -262,19 +282,26 @@ button {
     color: var(--text-equal-key-color);
 }
 
+.btn-equal-key:hover {
+    background: var(--equal-key-bg-color-hover);
+}
+
 .btn-reset-key {
     grid-column: 1 / 3;
 }
 
-.btn:hover {
-    filter: brightness(1.6) saturate(.9);
-}
-
-
-/* @media (min-width: 400px) {
+@media (min-width: 400px) {
+    .container {
+        margin: 2em auto;
+        
+    }
     .keyboard {
         gap: 1.25em;
         padding: 2em;
+    }
+
+    .display {
+        font-size: 2.5rem
     }
 }
  
@@ -283,14 +310,27 @@ button {
         gap: 1.5em;
         padding: 2em;
     }
-} */
+
+    .display {
+        font-size: 3rem
+    }
+}
 
 /* attribution styles */
 .attribution {
     font-size: 11px;
     text-align: center;
+    color: var(--screen-text-color);
 }
 
 .attribution a {
-    color: hsl(228, 45%, 44%);
+    color: var(--equal-key-bg-color);
+    text-decoration: none;
+}
+
+.attribution a:hover {
+    color: var(--text-function-key-color);
+    background-color: var(--function-key-bg-color);
+    padding: .5em;
+    border-radius: 10px;
 }
