--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ label {
 }
 
 .attribution a {
-    color: var(--equal-key-bg-color);
+    color: var(--equal-key-bg-color-hover);
     text-decoration: none;
 }
 
