adding :focus psuedo classes to buttons

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-[data-color-scheme="theme1"] {
+[color-scheme="theme1"] {
     /* background colors */
     --main-bg-color: hsl(222, 26%, 31%);
     --keypad-toggle-bg-color: hsl(223, 31%, 20%);
@@ -21,7 +21,7 @@
     --text-equal-key-color: #fff;
 }
 
-[data-color-scheme="theme2"] {
+[color-scheme="theme2"] {
     /* background colors */
     --main-bg-color: hsl(0, 0%, 90%);
     --keypad-toggle-bg-color: hsl(0, 5%, 81%);
@@ -45,7 +45,7 @@
 }
 
 
-[data-color-scheme="theme3"] {
+[color-scheme="theme3"] {
     /* background colors */
     --main-bg-color: hsl(268, 75%, 9%);
     --keypad-toggle-bg-color: hsl(268, 71%, 12%);
@@ -255,7 +255,8 @@ label {
     color: var(--text-primary-color);
 }
 
-.btn:hover {
+.btn:hover,
+.btn:focus {
     background: var(--primary-key-bg-color-hover);
 }
 
@@ -264,7 +265,8 @@ label {
     box-shadow: 0 4px 0 0 var(--function-key-shadow-color);
     color: var(--text-function-key-color);
 }
-.btn-function-key:hover {
+.btn-function-key:hover,
+.btn-function-key:focus {
     background: var(--function-key-bg-color-hover);
 }
 
@@ -275,7 +277,8 @@ label {
     color: var(--text-equal-key-color);
 }
 
-.btn-equal-key:hover {
+.btn-equal-key:hover,
+.btn-equal-key:focus {
     background: var(--equal-key-bg-color-hover);
 }
 
